# Smart-Traffic-Control-Simulation

./: README.md  traffic  traffic_system.cpp  traffic_system_flowchart.md
SFML/traffic_system/: CMakeLists.txt  README.md
